services/gatekeeper-policy-manager/1.0.1/kustom.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.middlewares: ${releaseNamespace}-stripprefix@kubernetescrd,${releaseNamespace}-forwardauth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: gpm-dashboard
  namespace: ${releaseNamespace}
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: gatekeeper-policy-manager
            port:
              number: 80
        path: /dkp/gatekeeper-policy-manager/dashboard
        pathType: ImplementationSpecific
